--- a/DiYa/Podfile
+++ b/DiYa/Podfile
@@ -1,14 +1,11 @@
 platform :ios, '8.0'
 use_frameworks!
 target 'DiYa' do
-pod 'AFNetworking', '~> 3.1.0'
 pod 'SDWebImage', '~> 4.0.0'
 pod 'AliyunOSSiOS', '~> 2.1.1'
 pod 'MBProgressHUD', '~> 0.9.2'
-pod 'MJExtension', '~> 3.0.10'
 pod 'MJRefresh', '~> 3.1.12'
 pod 'Masonry', '~> 1.0.1'
-pod 'WechatOpenSDK'
-pod 'UMengAnalytics-NO-IDFA'
-pod 'YYWebImage', '~> 1.0.5'
+pod 'SwiftyJSON', '~> 3.1.4'
+pod 'Alamofire', '~> 4.5.0'
 end
