搭建基础框架 登录界面

--- a/DiYa/Podfile
+++ b/DiYa/Podfile
@@ -4,8 +4,10 @@ target 'DiYa' do
 pod 'SDWebImage', '~> 4.0.0'
 pod 'AliyunOSSiOS', '~> 2.1.1'
 pod 'MBProgressHUD', '~> 0.9.2'
-pod 'MJRefresh', '~> 3.1.12'
+pod 'MJExtension', '~> 3.0.13'
 pod 'Masonry', '~> 1.0.1'
 pod 'SwiftyJSON', '~> 3.1.4'
 pod 'Alamofire', '~> 4.5.0'
+pod 'YYModel', '~> 1.0.4'
+pod 'MJRefresh', '~> 3.1.12'
 end
