--- a/DiYa/Podfile
+++ b/DiYa/Podfile
@@ -10,4 +10,5 @@ pod 'SwiftyJSON', '~> 3.1.4'
 pod 'Alamofire', '~> 4.5.0'
 pod 'YYModel', '~> 1.0.4'
 pod 'MJRefresh', '~> 3.1.12'
+pod 'YYWebImage', '~> 1.0.5'
 end
